--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -13,6 +13,33 @@
   </head>
   <body>
     {% crispy search_bar_form %}
+
+    <h1>Entries</h1>
+    <ul>
+    {% for entry in entries %}
+        <li>{{ entry.ent_seq }} </li>
+    {% empty %}
+        <li>No entries.</li>
+    {% endfor %}
+    </ul>
+
+    <div class="pagination">
+      <span class="step-links">
+        {% if page_obj.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+          Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+          <a href="?page={{ page_obj.next_page_number }}">next</a>
+          <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
