Good dictionary view

--- a/dictionary/templates/dictionary/entry_card.html
+++ b/dictionary/templates/dictionary/entry_card.html
@@ -1,20 +1,19 @@
 {% load dictionary_filters %}
 
 {% with main_keb=entry|entry_get_main_keb main_reb=entry|entry_get_main_reb %}
-  <span class="fs-3 text-normal me-3">
-    {% if main_keb %}
-    {{ main_keb }}
-    {% else %}
-    {{ main_reb }}
-    {% endif %}
-  </span>
-
-  {% if main_keb %}
-  <span class="text-normal">
-    {{ main_reb }}
-  </span>
-  {% endif %}
+  <div class="d-flex">
+    <div class="flex-grow-1">
+      <span class="fs-3 text-normal me-3">
+        {% if main_keb %} {{ main_keb }} {% else %} {{ main_reb }} {% endif %}
+      </span>
+      
+      {% if main_keb %}
+        <span class="text-normal"> {{ main_reb }} </span>
+      {% endif %}
+    </div>
+  </div>
 {% endwith %}
+
 <ul class="list-group">
   {% for sense in entry.sense_set.all %}
     <li class="list-group-item">
