--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -10,7 +10,7 @@
       <ul class="list-group">
         {% for entry in entries %}
           <li class="list-group-item">
-            {% include "dictionary/entry_card.html" %}
+            {% include "dictionary/dictionary_view_entry_card.html" %}
           </li>
         {% endfor %}
       </ul>
