--- a/decks/templates/decks/search.html
+++ b/decks/templates/decks/search.html
@@ -9,12 +9,14 @@
 {% block body %}
   {% csrf_token %}
 
-  {% crispy search_bar_form %}
+  <main class="container">
+    {% crispy search_bar_form %}
 
-  <p> {{ page_obj.paginator.count }} search results. </p>
-  {% if page_obj.paginator.count > 0 %}
-    {% include "decks/deck_list.html" %}
-    {% include "japyonary/paginator_widget.html" %}
-  {% endif %} {# entries.count #}
+    <p> {{ page_obj.paginator.count }} search results. </p>
+    {% if page_obj.paginator.count > 0 %}
+      {% include "decks/deck_list.html" %}
+      {% include "japyonary/paginator_widget.html" %}
+    {% endif %} {# entries.count #}
+  </main>
   
 {% endblock %}
