--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -1,27 +1,25 @@
 <div class="album py-5">
-  <div class="container">
-    <div class="row">
-      {% for deck in decks %}
-        <div class="col-lg-4">
-          <div class="card mb-4 box-shadow">
-            <a href="{% url 'decks:deck_detail' deck.pk %}" style="max-height: 225px; overflow: hidden">
-              <img class="card-img-top" src="{{ deck.cover_image.url }}" alt="Card image cap"></img>
-            </a>
-            <div class="card-body text-wrap">
-              <h5 class="card-title">{{ deck.name }} </h5>
-              <p class="card-text text-truncate">{{ deck.description }}</p>
-              <div class="d-flex">
-                <div class="flex-grow-1">
-                  <a href="{% url 'users:user_profile' deck.owner.username %}"> by {{ deck.owner.username }} </a>
-                </div>
-                <div>
-                  {% include 'decks/heart_widget.html' %}
-                </div>
+  <div class="row">
+    {% for deck in decks %}
+      <div class="col-lg-4">
+        <div class="card mb-4 box-shadow">
+          <a href="{% url 'decks:deck_detail' deck.pk %}" style="max-height: 225px; overflow: hidden">
+            <img class="card-img-top" src="{{ deck.cover_image.url }}"></img>
+          </a>
+          <div class="card-body text-wrap">
+            <h5 class="card-title">{{ deck.name }} </h5>
+            <p class="card-text text-truncate">{{ deck.description }}</p>
+            <div class="d-flex">
+              <div class="flex-grow-1">
+                <a href="{% url 'users:user_profile' deck.owner.username %}"> by {{ deck.owner.username }} </a>
+              </div>
+              <div>
+                {% include 'decks/heart_widget.html' %}
               </div>
             </div>
           </div>
         </div>
-      {% endfor %}
-    </div>
+      </div>
+    {% endfor %}
   </div>
 </div>
