Deck vocabulary editor

--- a/decks/templates/decks/search.html
+++ b/decks/templates/decks/search.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block head %}
+<script type="text/javascript" src="{% static 'decks/ajax_buttons.js' %}"></script>
 <script type="text/javascript" src="{% static 'decks/heart.js' %}"></script>
 {% endblock %}
 
