--- a/decks/templates/decks/detail.html
+++ b/decks/templates/decks/detail.html
@@ -3,13 +3,9 @@
 {% load crispy_forms_tags %}
 
 {% block head %}
-<script type="text/javascript" src="{% static 'decks/heart.js' %}"></script>
 
-<script>
-  function create_post() {
-    alert("Ciao");
-  }
-</script>
+<script type="text/javascript" src="{% static 'decks/ajax_buttons.js' %}"></script>
+<script type="text/javascript" src="{% static 'decks/heart.js' %}"></script>
 
 {% endblock %}
 
@@ -28,8 +24,8 @@
         <div class="d-flex">
           <h1 class="flex-grow-1 text-wrap"> {{ deck.name }} </h1>
           <div class="d-flex m-2">
-            <button class="btn btn-primary"> View vocabulary </button>
-            <button class="btn btn-primary" style="margin-left: 0.5em;"> Clone deck </button>
+            <a class="btn btn-primary" href="{% url 'decks:deck_vocabulary' deck.pk %}"> View vocabulary </a>
+            <a class="btn btn-primary" style="margin-left: 0.5em;"> Clone deck </a>
             <div style="margin-left: 0.5em; margin-top: 0.5em;">
               {% include 'decks/heart_widget.html' %}
             </div>
@@ -62,9 +58,11 @@
         No comments here... Don't you hate this? Say something!
       {% endif %}
 
-      <div class="mt-3 p-3 shadow">
-        {% crispy add_comment_form %}
-      </div>
+      {% if user.is_authenticated %}
+        <div class="mt-3 p-3 shadow">
+          {% crispy add_comment_form %}
+        </div>
+      {% endif %}
     </div>
   </header>
 </main>
