--- a/japyonary/templates/japyonary/base.html
+++ b/japyonary/templates/japyonary/base.html
@@ -11,7 +11,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
+  
   <body>
+    <header class="container-fluid mb-3" style="background: #214a87;">
+      <nav class="container navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="/"> Japyonary </a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"> <a class="nav-link p-2" href="/">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link p-2 active" href="/">Dictionary</a> </li>
+          <li class="nav-item"> <a class="nav-link p-2" href="/">Decks</a> </li>
+        </ul>
+        
+        <ul class="navbar-nav">
+          <li class="nav-item"> <a class="nav-link p-2" href="/">Profile</a> </li>
+          <li class="nav-item"> <a class="nav-link p-2" href="/">Log out</a> </li>
+        </ul>
+      </nav>
+    </header>
+
     {% block body %} {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
