--- a/japyonary/templates/japyonary/paginator_widget.html
+++ b/japyonary/templates/japyonary/paginator_widget.html
@@ -1,9 +1,11 @@
 {% if page_obj.paginator.num_pages > 1 %}
+  {% load url_tags %}
+  
   <div class="pagination">
     <span class="step-links">
       {% if page_obj.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        <a href="?{% url_with_updated_query page=1 %}">&laquo; first</a>
+        <a href="?{% url_with_updated_query page=page_obj.previous_page_number %}">previous</a>
       {% endif %}
 
       <span class="current">
@@ -11,8 +13,8 @@
       </span>
 
       {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">next</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        <a href="?{% url_with_updated_query page=page_obj.next_page_number %}">next</a>
+        <a href="?{% url_with_updated_query page=page_obj.paginator.num_pages %}">last &raquo;</a>
       {% endif %}
     </span>
   </div>
