--- a/japyonary/templates/japyonary/base.html
+++ b/japyonary/templates/japyonary/base.html
@@ -18,8 +18,8 @@
         <a class="navbar-brand" href="/"> Japyonary </a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"> <a class="nav-link p-2" href="/">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link p-2 active" href="/">Dictionary</a> </li>
-          <li class="nav-item"> <a class="nav-link p-2" href="/">Decks</a> </li>
+          <li class="nav-item"> <a class="nav-link p-2 active" href="{% url 'dictionary:index' %}">Dictionary</a> </li>
+          <li class="nav-item"> <a class="nav-link p-2" href="{% url 'decks:deck_search' %}">Decks</a> </li>
         </ul>
         
         <ul class="navbar-nav">
