--- a/decks/templates/decks/detail.html
+++ b/decks/templates/decks/detail.html
@@ -21,31 +21,44 @@
           <img src="{{ deck|deck_image_url_or_empty }}" class="shadow" style="width: 100%; height: 100%;"></img>
         </div>
       </div>
-      <div class="flex-grow-1 text-wrap">
-        <div class="d-flex">
-          <h1 class="flex-grow-1 text-wrap"> {{ deck.name }} </h1>
-          <div class="d-flex m-2">
-            <div class="mx-3 mt-2">
-              {% include 'decks/heart_widget.html' %}
-            </div>
-            <a class="btn btn-primary" href="{% url 'decks:deck_vocabulary' deck.pk %}"> View vocabulary ({{ deck.dictionary_entries.count }}) </a>
-            <form action="{% url 'decks:deck_clone' %}" method="post" id="cloneDeck">
-              {% csrf_token %}
-              <input type="hidden" value="{{ deck.pk }}" name="deck_id" />
-              <button class="btn btn-primary mx-1" type="submit"> Clone deck </button>
-            </form>
-
-            {% if request.user == deck.owner %}
-            <form action="{% url 'decks:deck_delete' deck.pk %}" method="get" id="deleteForm">
-              <button type="submit" class="btn btn-danger ml-1"> Delete deck </button>
-            </form>
-            {% endif %}
-          </div>
+      <div class="flex-grow-1 text-wrap d-flex">
+        <div class="flex-grow-1">
+          <h1 class="text-wrap"> {{ deck.name }} </h1>
+          <a href="{% url 'users:user_profile' deck.owner.username %}" class="text-muted"> by {{ deck.owner.username }} </a>
+          <p class="mt-3">
+            {{ deck.description }}
+          </p>
         </div>
-        <a href="{% url 'users:user_profile' deck.owner.username %}" class="text-muted"> by {{ deck.owner.username }} </a>
-        <p class="mt-3">
-          {{ deck.description }}
-        </p>
+        <div class="navbar navbar-expand-xl" style="align-items: normal;">
+          <ul class="navbar-nav mb-2 mb-lg-0 justify-content-end">
+            <li class="nav-item mx-1 mt-2 ms-auto">
+              {% include 'decks/heart_widget.html' %}
+            </li>
+            <li class="nav-item mx-1 my-1 ms-auto">
+              <a class="btn btn-primary" href="{% url 'decks:deck_vocabulary' deck.pk %}"> View vocabulary ({{ deck.dictionary_entries.count }}) </a>
+            </li>
+            <li class="nav-item mx-1 my-1 ms-auto">
+              <form action="{% url 'decks:deck_clone' %}" method="post" id="cloneDeck">
+                {% csrf_token %}
+                <input type="hidden" value="{{ deck.pk }}" name="deck_id" />
+                <button class="btn btn-primary" type="submit"> Clone </button>
+              </form>
+            </li>
+  
+            {% if request.user == deck.owner %}
+            <li class="nav-item mx-1 my-1 ms-auto">
+              <a class="btn btn-primary" href="{%url 'decks:deck_update' deck.pk %}">
+                Edit
+              </a>
+            </li>
+            <li class="nav-item mx-1 my-1 ms-auto">
+              <form action="{% url 'decks:deck_delete' deck.pk %}" method="get" id="deleteForm">
+                <button type="submit" class="btn btn-danger"> Delete </button>
+              </form>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
       </div>
     </div>
     <div class="mt-5">
