--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -14,7 +14,7 @@
             <p class="card-text text-truncate">{{ deck.description }}</p>
             <div class="d-flex">
               <div class="flex-grow-1">
-                <a href="{% url 'users:user_profile' deck.owner.username %}"> by {{ deck.owner.username }} </a>
+                <a class="text-muted" href="{% url 'decks:deck_search'%}?mode=author&query={{ deck.owner.username }}"> by {{ deck.owner.username }} </a>
               </div>
               <div>
                 {% include 'decks/heart_widget.html' %}
