--- a/decks/templates/decks/detail.html
+++ b/decks/templates/decks/detail.html
@@ -24,7 +24,7 @@
       <div class="flex-grow-1 text-wrap d-flex">
         <div class="flex-grow-1">
           <h1 class="text-wrap"> {{ deck.name }} </h1>
-          <a href="{% url 'users:user_profile' deck.owner.username %}" class="text-muted"> by {{ deck.owner.username }} </a>
+          <a class="text-muted" href="{% url 'decks:deck_search'%}?mode=author&query={{ deck.owner.username }}"> by {{ deck.owner.username }} </a>
           <p class="mt-3">
             {{ deck.description }}
           </p>
@@ -69,7 +69,7 @@
           {% for comment in deck.comment_set.all %}
             <li class="list-group-item">
               <div class="d-flex">
-                <a class="h5 link-dark" href="{% url 'users:user_profile' deck.owner.username %}">
+                <a class="h5 link-dark" href="{% url 'decks:deck_search'%}?mode=author&query={{ deck.owner.username }}">
                   {{ comment.owner.username }}
                 </a>
                 <small style="margin-left: 1em; margin-top: 0.2em"> {{ comment.creation_timestamp }} </small>
