--- a/dictionary/templates/dictionary/index.html
+++ b/dictionary/templates/dictionary/index.html
@@ -1,5 +1,8 @@
 {% extends "japyonary/base.html" %}
 {% load crispy_forms_tags %}
+
+{% block 'navbar-highlighed-url' %} #nav-url-dict {% endblock %}
+
 {% block body %}
   <main class="container">
     {% crispy search_bar_form %}
