--- a/japyonary/templates/japyonary/base.html
+++ b/japyonary/templates/japyonary/base.html
@@ -8,23 +8,39 @@
 
     {% block head %} {% endblock %}
 
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const activePage = document.querySelector('[name=navbar-highlighted-url]').value;
+
+        if (!activePage)
+          return;
+
+        const link = document.querySelector(activePage);
+        link.classList.add('active')
+      });
+    </script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   
   <body>
+    <input type="hidden" value="{% block 'navbar-highlighed-url' %}{% endblock %}" name="navbar-highlighted-url"/>
     <header class="container-fluid mb-3" style="background: #214a87;">
       <nav class="container navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/"> Japyonary </a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"> <a class="nav-link p-2" href="/">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link p-2 active" href="{% url 'dictionary:index' %}">Dictionary</a> </li>
-          <li class="nav-item"> <a class="nav-link p-2" href="{% url 'decks:deck_search' %}">Decks</a> </li>
+          <li class="nav-item"> <a id="nav-url-dict" class="nav-link p-2" href="{% url 'dictionary:index' %}">Dictionary</a> </li>
+          <li class="nav-item"> <a id="nav-url-deck" class="nav-link p-2" href="{% url 'decks:deck_search' %}">Decks</a> </li>
         </ul>
-        
         <ul class="navbar-nav">
-          <li class="nav-item"> <a class="nav-link p-2" href="/">Profile</a> </li>
-          <li class="nav-item"> <a class="nav-link p-2" href="/">Log out</a> </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item"> <a class="nav-link p-2" href="{% url 'decks:deck_search' %}?mode=author&query={{ user.username }}">My decks</a> </li>
+            <li class="nav-item"> <a class="nav-link p-2" href="{% url 'users:logout' %}">Log out</a> </li>
+          {% else %}
+            <li class="nav-item"> <a class="nav-link p-2" href="{% url 'users:login' %}">Log in</a> </li>
+            <li class="nav-item"> <a class="nav-link p-2" href="{% url 'users:signup' %}">Sign Up</a> </li>
+          {% endif %}
         </ul>
       </nav>
     </header>
