--- a/decks/templates/decks/deck_vocabulary.html
+++ b/decks/templates/decks/deck_vocabulary.html
@@ -7,6 +7,7 @@
 
 <script type="text/javascript" src="{% static 'decks/ajax_buttons.js' %}"></script>
 <script type="text/javascript" src="{% static 'decks/toggle_entry.js' %}"></script>
+<script type="text/javascript" src="{% static 'srs/add_flashcard.js' %}"></script>
 
 <style>
   .deck-entry-unowned * {
