--- a/srs/templates/srs/srs_review.html
+++ b/srs/templates/srs/srs_review.html
@@ -17,11 +17,20 @@
       align-items: center;
     }
 
-    #srs_host {
+    #srs-host {
       
     }
+
     nav {
       background: transparent;
+    }
+
+    .list-group-item {
+      color: white !important;
+      align-items: center;
+      flex-direction: column;
+      display: flex !important;
+      border: none !important;
     }
   </style>
   <script type="text/javascript" src="{% static 'srs/srs.js' %}"></script>
@@ -32,18 +41,24 @@
     <header>
       <nav class="container navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="/"> Japyonary </a>
+
+        <ul class="flex-grow-1"></ul>
+
+        <button id='srs-undo-button' onclick="undo()" class="btn text-light border border-warning">
+          Undo
+        </button>
       </nav>
     </header>
-    <main id='srs_host' class="flex-grow-1 center-container my-2">
-      
+    <main id='srs-host' class="flex-grow-1 center-container my-2">
+      <div id="srs-answer"></div>
     </main>
     <footer class="center-container my-4">
-      <div id="srs-show-answer-buttons">
-        <button class="btn btn-lg btn-success"> Yes </button>
-        <button class="btn btn-lg btn-danger"> No </button>
+      <div id="srs-shown-answer-buttons" class="d-none">
+        <button class="btn btn-lg btn-success" onclick="answer(1);"> Yes </button>
+        <button class="btn btn-lg btn-danger" onclick="answer(0);"> No </button>
       </div>
       <div id="srs-hidden-answer-buttons">
-        <button class="btn btn-lg text-light border border-primary"> Answer </button>
+        <button class="btn btn-lg text-light border border-primary" onclick="showAnswer();"> Answer </button>
       </div>
     </footer>
   </div>
