--- a/japyonary/templates/japyonary/base.html
+++ b/japyonary/templates/japyonary/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block head %} {% endblock %}
+
+    <style>
+      #status-bar {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        opacity: 0;
+        transition: opacity 0.15s;
+        pointer-events: none;
+      }
+    </style>
+
+    <script type="text/javascript" src="{% static 'japyonary/status_bar.js' %}"></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -14,9 +30,14 @@
           return;
 
         const link = document.querySelector(activePage);
-        link.classList.add('active')
+        link.classList.add('active');
+
+        {% if status_bar_message %}
+          trigger_status_bar("{{ status_bar_message }}", {{ status_bar_ok }});
+        {% endif %}
       });
     </script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -45,6 +66,8 @@
     </header>
 
     {% block body %} {% endblock %}
+
+    <div id="status-bar" class="text-center p-2"/>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
